syntax = "proto3";

import "file.proto";
import "metadata.proto";

option java_multiple_files = true;
option java_package = "se.umu.cs";
option java_outer_classname = "NeoPayloadMessage";

package se.umu.cs;

message NeoPayload {
    NeoFile file = 1;
    NeoMetadata metadata = 2;
}